--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -21,6 +21,7 @@
 @import "./helpers/z-depth";
 
 // UI ELEMENTS
+@import "./ui/account";
 @import "./ui/actions";
 @import "./ui/burger";
 @import "./ui/breadcrumbs";
