--- a/app/assets/stylesheets/tenon/variables/z-index.scss
+++ b/app/assets/stylesheets/tenon/variables/z-index.scss
@@ -11,4 +11,5 @@ $z-kebab-dropdown: 10;
 $z-btn-floating: 10;
 $z-panel-open: 10;
 $z-quick-search-active: 50;
-$z-quick-search: 10;
+$z-quick-search-input: 10;
+$z-quick-search-actions: 20;
