--- a/spec/dummy/app/views/tenon/posts/_form.html.haml
+++ b/spec/dummy/app/views/tenon/posts/_form.html.haml
@@ -1,9 +1,9 @@
 = autosaving_form_for @post do |f|
-  .toolbar
+  .toolbar.bg-color-primary-dk20
     = render 'tenon/shared/breadcrumbs'
     .actions
       - if can?(:publish, @post)
-        %button.btn.btn-white.btn-flat.submit{ data: { disable_with: "Please wait..." } } Save
+        %button.btn.btn-flat.submit{ data: { disable_with: "Please wait..." } } Save
 
       %a.action.dropdown-button{ href: '#!', data: { activates: 'form-dropdown'} }
         %i.icon.ion-android-more-vertical
