--- a/app/assets/stylesheets/tenon/layout/toolbar.scss
+++ b/app/assets/stylesheets/tenon/layout/toolbar.scss
@@ -7,7 +7,8 @@
   width: 100%;
   height: $util-nav-height;
   padding: 0 $default-spacing*3 0 $main-nav-width;
-  background: $toolbar-bg-color;
+  background-color: $toolbar-bg-color;
+
   .actions {
     line-height: $util-nav-height;
     right: $default-spacing*3;
