--- a/app/assets/stylesheets/tenon/ui/actions.scss
+++ b/app/assets/stylesheets/tenon/ui/actions.scss
@@ -9,7 +9,7 @@
   }
 }
 
-.action {
+.action-icon {
   @include font-size($h3-size);
   display: inline-block;
   padding: 0 $default-spacing/2;
@@ -22,4 +22,8 @@
   top: -3px;
   text-transform: uppercase;
   color: $primary-color;
+}
+
+.action-btn {
+  margin: 0 $default-spacing/2;
 }
