smoe more style things related to the util nav and feedback

--- a/app/views/tenon/shared/_util_nav.html.haml
+++ b/app/views/tenon/shared/_util_nav.html.haml
@@ -19,8 +19,7 @@
         Alarm Alert
 
   = link_to '#!', class: 'account-avatar dropdown-button', data: { activates: 'current-user-dropdown'} do
-    -# Users initial?
-    A
+    %i.icon.ion-android-person
     = image_tag('tenon/icon-57x57.png')
 
   %ul.dropdown-content#current-user-dropdown
