--- a/spec/dummy/app/views/tenon/galleries/index.html.haml
+++ b/spec/dummy/app/views/tenon/galleries/index.html.haml
@@ -1,4 +1,5 @@
 = react_component 'ResourceIndexRoot',
     title: 'Galleries',
+    breadcrumbs: breadcrumb_links,
     recordsPath: galleries_path(format: 'json'),
     newPath: new_gallery_path
