--- a/spec/dummy/app/views/tenon/pages/index.html.haml
+++ b/spec/dummy/app/views/tenon/pages/index.html.haml
@@ -1,23 +1,5 @@
-- content_for :sidebar do
-  .sidebar
-    .content
-      %h2 Pages
-      = link_to "New Page", new_page_path, class: 'btn btn-block btn-primary'
-
-%header
-  %h1 Pages
-
-  .tools
-    = render "tenon/shared/section_header/sidebar_toggle"
-
-    .header-button
-      = link_to '#', id: 'quick-search-toggle' do
-        .header-icon= fa_icon('fw search')
-
-.toolbox
-  = render "tenon/shared/section_header/quick_search", record_list: '#pages'
-
-.main-content
-  %ul#pages.record-list.sortable.nested{data: {records: {url: pages_path(format: 'json'), template: 'tenon/templates/pages/page_row', name: 'page', nested: 'true'}, :'reorder-path' => reorder_pages_path}}
-
-  = link_to "Load More Pages", '#', :class => 'btn btn-comp infinite-loader', 'data-record-list' => '#pages'
+= react_component 'ResourceIndexRoot',
+    title: 'Pages',
+    breadcrumbs: breadcrumb_links,
+    recordsPath: pages_path(format: 'json'),
+    newPath: new_page_path
