--- a/app/assets/stylesheets/tenon/ui/account.scss
+++ b/app/assets/stylesheets/tenon/ui/account.scss
@@ -6,7 +6,7 @@
 }
 
 .account-avatar {
-  @include font-size-p;
+  @include font-size-h3;
   line-height: $util-nav-height - 20px;
   position: relative;
   display: block;
@@ -26,7 +26,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    display: block;
+    display: none;
     width: 100%;
   }
 }
