--- a/spec/dummy/app/views/tenon/post_categories/index.html.haml
+++ b/spec/dummy/app/views/tenon/post_categories/index.html.haml
@@ -1,30 +1,5 @@
-- content_for :sidebar do
-  #new-post_category{:style => "display: none;"}
-    = render "form"
-
-  .sidebar
-    .content
-      %h2 Post Categories
-      = link_to "New Post Category", '#', class: 'btn btn-block btn-primary', data: { 'modal-target' => '#new-post_category', 'modal-title' => 'New Post Category' }
-
-    = render "tenon/shared/posts_nav"
-
-
-%header
-  %h1 Post Categories
-
-  .tools
-    = render "tenon/shared/section_header/sidebar_toggle"
-
-    .header-button
-      = link_to '#', id: 'quick-search-toggle' do
-        .header-icon= fa_icon('fw search')
-
-.toolbox
-  = render "tenon/shared/section_header/quick_search", record_list: '#post_categories'
-
-.main-content
-  = error_messages_for :post_category
-  %ul#post_categories.record-list{data: {records: {url: post_categories_path(format: 'json'), template: 'tenon/templates/post_categories/post_category_row', name: 'post_category'}}}
-
-  = link_to "Load More Post Categories", '#', :class => 'btn btn-comp infinite-loader', 'data-record-list' => '#post_categories'
+= react_component 'ResourceIndexRoot',
+    title: 'Categories',
+    breadcrumbs: breadcrumb_links,
+    recordsPath: post_categories_path(format: 'json'),
+    newPath: new_post_category_path
