account links and some color css refactoring

--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -8,9 +8,14 @@
 @import "./grid";
 
 // VARIABLES
-@import "variables/colors";
-@import "variables/sizes";
-@import "variables/z-index";
+@import "./helpers/color-generator";
+@import "./variables/colors/named";
+@import "client/color-names";
+@import "./variables/colors";
+@import "client/color-variables";
+
+@import "./variables/sizes";
+@import "./variables/z-index";
 
 // HELPERS
 @import "./helpers/alignment";
