add active notification class to account notification icon

--- a/app/assets/stylesheets/tenon/ui/account.scss
+++ b/app/assets/stylesheets/tenon/ui/account.scss
@@ -44,4 +44,11 @@
 
 .account-notifications {
   margin-right: $default-spacing/3;
+  &.has-notifications {
+    i {
+      &:before {
+        content: "\f39b";
+      }
+    }
+  }
 }
