some css refactor and organization

--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -26,20 +26,21 @@
 @import "./helpers/z-depth";
 
 // UI ELEMENTS
-@import "./ui/account";
 @import "./ui/actions";
-@import "./ui/burger";
-@import "./ui/breadcrumbs";
 @import "./ui/btn";
 @import "./ui/dropdown-content";
 @import "./ui/flash-message";
 @import "./ui/lists";
 @import "./ui/panel";
 @import "./ui/typography";
-@import "./ui/tool-toggles";
+// @import "./ui/tool-toggles"; I'm not sure this is used -jamie
 @import "./ui/form-inputs";
+
 @import "./ui/main-nav";
 
+@import "./ui/util-nav/account";
+@import "./ui/util-nav/burger";
+@import "./ui/util-nav/breadcrumbs";
 
 // LAYOUT
 @import "./layout/header";
