working refacred typography

--- a/app/assets/stylesheets/client/color-names.scss
+++ b/app/assets/stylesheets/client/color-names.scss
@@ -1,3 +1,4 @@
 // Override named colors here
 
-// Defined colors can be found here: app/assets/stylesheets/tenon/variables/colors/named.scss
+// Defined colors can be found here:
+// app/assets/stylesheets/tenon/variables/colors/named.scss
