--- a/app/assets/stylesheets/client/color-variables.scss
+++ b/app/assets/stylesheets/client/color-variables.scss
@@ -1,3 +1,4 @@
 // Override color variables here
 
-// Defined variables can be found here: app/assets/stylesheets/tenon/variables/colors.scss
+// Defined variables can be found here:
+// app/assets/stylesheets/tenon/variables/colors.scss
