--- a/app/assets/stylesheets/tenon/ui/main-nav/app-info.scss
+++ b/app/assets/stylesheets/tenon/ui/main-nav/app-info.scss
@@ -1,6 +1,6 @@
 .app-info {
   @include truncate;
-  @include font-size-p;
+  @include font-body;
   line-height: $toolbar-height;
   height: $toolbar-height;
   margin: 0;
