--- a/app/views/tenon/shared/_draft_controls.html.haml
+++ b/app/views/tenon/shared/_draft_controls.html.haml
@@ -1,4 +1,4 @@
-%li.action-dropdown-label.label.last-autosave Draft Versions
+%li.dropdown-label.last-autosave Draft Versions
 %li
   = link_to new_item_version_path(item_type: class_for(obj), item_id: obj.id), data: { modal_remote: true, modal_handler: 'Tenon.features.NewItemVersionHandler', modal_title: 'Save Draft' } do
     %i.icon.ion-ios-cloud-upload
