beginning of atomizing actions

--- a/app/assets/stylesheets/tenon/layout/record-panel.scss
+++ b/app/assets/stylesheets/tenon/layout/record-panel.scss
@@ -35,9 +35,7 @@
     padding-left: $default-spacing/2;
     text-align: right;
     background-color: $panel-bg-color;
-    a {
-      display: inline-block;
-      padding: 0 $default-spacing/3;
+    .action-icon {
       color: $primary-fg-color;
       &:hover {
         color: $primary-color;
