molecularized actions, atomized action-icons, action-btn, action-text

--- a/app/assets/stylesheets/tenon/atoms/action-icons.scss
+++ b/app/assets/stylesheets/tenon/atoms/action-icons.scss
@@ -1,5 +1,6 @@
 .action-icon {
   line-height: $default-spacing*1.5;
+  position: relative;
   display: inline-block;
   color: $primary-fg-color;
   i {
