--- a/app/assets/stylesheets/tenon/layout/quick-search.scss
+++ b/app/assets/stylesheets/tenon/layout/quick-search.scss
@@ -74,8 +74,8 @@ input.search {
   }
 }
 
-.action-text.search-advanced-toggle {
-  top: -2px;
+.search-advanced-toggle.action-text {
+  top: -1px;
   padding: 2px 8px;
   &:hover {
     text-decoration: none;
