--- a/spec/dummy/app/views/tenon/posts/_form.html.haml
+++ b/spec/dummy/app/views/tenon/posts/_form.html.haml
@@ -21,7 +21,7 @@
   %main
     = error_messages_for :post
 
-    = f.text_field :title, required: true, class: 'title'
+    = f.text_field :title, required: true, class: 'form-title-field'
 
     .form-label Content
     .panel.block
